# tz-1

./: README.md
app/: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements-linux.txt  requirements.txt  tz1.postman_collection.json  tz1.postman_environment.json
app/api_v1/: apps.py  models.py  renderers.py  serializers.py  tests.py  urls.py  views.py
app/api_v1/migrations/: 0001_initial.py  0002_alter_stockmovement_date_alter_stockmovement_note.py  0003_alter_stockmovement_date.py  0004_alter_product_supplier_alter_stockmovement_product_and_more.py  0005_alter_product_supplier_alter_stockmovement_product_and_more.py  0006_alter_product_supplier_alter_stockmovement_product_and_more.py
app/app/: settings.py  urls.py
app/home/: urls.py  views.py
app/home/templates/home/: index.html
