[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "test-zadanie-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Cranel"},
]
dependencies = [
    "asgiref==3.9.1",
    "Django==5.2.4",
    "djangorestframework==3.16.0",
    "drf-excel==2.5.3",
    "numpy==2.2.6",
    "openpyxl==3.1.5",
    "pandas==2.3.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "sqlparse==0.5.3",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "flake8==7.3.0",
    "flake8-docstrings==1.7.0",
    "isort==6.0.1",
    "mccabe==0.7.0",
    "mypy_extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pycodestyle==2.14.0",
    "pydocstyle==6.3.0",
    "pyflakes==3.4.0",
    "snowballstemmer==3.0.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "watchdog>=6.0.0,<7.0.0",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\\.pyi?$'
exclude = """(
/migrations/|
/env/|
/\\.venv/|
/\\.tox/|
/\\.git/|
/__pycache__/|
/\\.mypy_cache/|
/\\.pytest_cache/|
\\.eggs/|
\\.ropeproject/
)"""

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = "app"

[tool.flake8]
max-line-length = 120
extend-ignore = "D203,D212,D213,D214,D215,D404,D405,D406,D407,D408,D409,D410,D411,D412,D413,D414,D415,D416,D417"
docstring-convention = "pep257"